[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Levels/LevelEngine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/LoveLevel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/SeaSalt.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Paprika.tscn" type="PackedScene" id=5]

[node name="LoveLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="Paprika" parent="." instance=ExtResource( 5 )]
position = Vector2( 416, 368 )
scale = Vector2( 2.5, 2.5 )

[node name="SeaSalt" parent="." instance=ExtResource( 4 )]
position = Vector2( 1000, 112 )

[node name="SpeechBubble" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 160 )

[node name="Timer" type="Timer" parent="."]

[node name="LevelEngine" parent="." instance=ExtResource( 1 )]
visible = false
available_phonemes = [ "a", "ʟ", "v", "ɨ", "ʋ" ]

[connection signal="on_finish_talking" from="SeaSalt" to="." method="_on_SeaSalt_on_finish_talking"]
[connection signal="on_complete" from="LevelEngine" to="." method="_on_LevelEngine_on_complete"]
[connection signal="on_wrong" from="LevelEngine" to="." method="_on_LevelEngine_on_wrong"]
